# Ian-Kiogora-Mwenda

./: Array101.c  README.md  calc.c
Assignment2/: Armstrong.c  Fibonacci.c  functioncalc.c
DSP_Toolbox C/: CMakeLists.txt
DSP_Toolbox C/Include/: convolution.h  fft.h  fir_filter.h  iir_filter.h  io.h  modulation.h  signal_gen.h  spectral_analysis.h  utility.h  window.h
DSP_Toolbox C/src/: convolution.c  fft.c  fir_filter.c  iir_filter.c  io.c  main.c  modulation.c  signal_gen.c  spectral_analysis.c  utility.c  window.c
DSP_Toolbox C/tests/: test_convolution.c  test_fft.c  test_filtering.c  test_io.c  test_modulation.c  test_signal_gen.c  test_spectral_analysis.c  test_utility.c  test_window.c
Digital Signal Processing Toolbox/: Group Members  h.c
Digital Signal Processing Toolbox/include/: bandpass_filter.h  fft.h  highpass_filter.h  ifft.h  lowpass_filter.h  sine_signal.h
Digital Signal Processing Toolbox/src/: bandpass_filter.c  convolve.c  convolve2D.c  cosine_signal.c  fft.c  highpass_filter.c  ifft.c  lowpass_filter.c  main.c  sine_signal.c
Digital Signal Processing Toolbox/src2/: convolution.c  convolution.h  fft.c  fft.h  iir_filter.c  iir_filter.h  main.c  signal_gen.c  signal_gen.h
assign 2/: Fibonacci.c  Palindrome.c  functioncalc.c
assign_3/: class.c  student.txt
src2/: convolution.c  convolution.h  fft.c  fft.h  iir_filter.c  signal_gen.c
